Fixed the code tag overflows the content area when strings are long.

--- a/css/basic.css
+++ b/css/basic.css
@@ -154,8 +154,7 @@ code
 	font-size: 75%;
 	max-width: 100%;
 	padding: 2px 5px;
-	overflow-x: auto;
-	white-space: nowrap;
+	overflow-wrap: break-word;
 }
 
 hr
